CLOSED - task 6: Prev/Next buttons - wrapping around on 'Get results' link  http://github.com/alexlittle/django-mquiz-static/issues/issue/6

--- a/assets/www/includes/mquiz-core.css
+++ b/assets/www/includes/mquiz-core.css
@@ -150,7 +150,7 @@
 
 #mq #quiznavnext {
 	float:right;
-	width:30%;
+	width:50%;
 	text-align:center;
 	background: silver;
 	margin:5px;
